--- a/conf/calc/home_unimod.ini
+++ b/conf/calc/home_unimod.ini
@@ -1,9 +1,9 @@
-calc(initialdir) ./data/Test/19120202/S02
+calc(initialdir) D:/git/wms-lmz/data/Test/19120202/S02
 wms(S01,l,uv)    250000   
 wms(S01,l,ir)    930000   
 wms(S01,npoints) 100
-wms(S02,l,uv)    250000   
-wms(S02,l,ir)    930000   
+wms(S02,l,uv)    420000   
+wms(S02,l,ir)    900000   
 wms(S02,npoints) 100
 wms(S04,l,uv)    250000   
 wms(S04,l,ir)    930000   
